--- a/www/src/lib/translations/de/standard.json
+++ b/www/src/lib/translations/de/standard.json
@@ -2,9 +2,23 @@
 	"home": "Startseite",
 	"about": "Über uns",
 	"title": "Willkommen bei SvelteKit",
-	"shit.happens": "Auweh...",
+	"shit.happens": "Oh Scheiße...",
 	"404": "Seite nicht gefunden.",
-	"500": "Server interner Fehler.",
+	"500": "Interner Serverfehler.",
 	"default": "Ein Fehler ist aufgetreten.",
-	"notification--comment": "Sie haben {{count:gt; 0:{{count}} neue {{count; 1:Nachricht; default:Nachrichten}}!; default:keine Nachrichten...}}"
+	"notification--comment": "Sie haben {{count:gt; 0:{{count}} neue {{count; 1:Nachricht; default:Nachrichten}}!; default:keine Nachrichten...}}",
+	"news": "Neuigkeiten",
+	"settings": "Einstellungen",
+	"light_mode": "Hellmodus",
+	"search": "Suche",
+	"we_are_the": "Wir sind <br /> die",
+	"all_posts": "Alle Beiträge",
+	"fswinf_description": "Fachschaft und Studienvertretung für Wirtschaftsinformatik <br/> und Data Science an der TU Wien",
+	"posts": "Beiträge",
+	"studies": "Studien",
+	"search_for_anything": "Suche nach allem",
+	"on_this_page": "Auf dieser Seite",
+	"read_more": "Read more:",
+	"navigation": "Navigation",
+	"funny_text_here": "Witziger Text hier"
 }
