--- a/www/src/lib/translations/de/standard.json
+++ b/www/src/lib/translations/de/standard.json
@@ -18,7 +18,8 @@
 	"studies": "Studien",
 	"search_for_anything": "Suche nach allem",
 	"on_this_page": "Auf dieser Seite",
-	"read_more": "Read more:",
+	"read_more": "Lies weiter:",
 	"navigation": "Navigation",
-	"funny_text_here": "Witziger Text hier"
+	"funny_text_here": "Witziger Text hier",
+	"no_headers": "Keine Überschriften auf dieser Seite."
 }
