--- a/www/src/lib/translations/en/standard.json
+++ b/www/src/lib/translations/en/standard.json
@@ -20,5 +20,6 @@
 	"on_this_page": "On this page",
 	"read_more": "Read more:",
 	"navigation": "Navigation",
-	"funny_text_here": "Funny Text Here"
+	"funny_text_here": "Funny Text Here",
+	"no_headers": "No headers on this page."
 }
